--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "clsx": "^2.1.0",
+    "express": "^4.18.2",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
